# omega-engine

./: .gitignore  ADVANCED_SYSTEMS.md  BATCH2_COMPLETION_SUMMARY.md  CERTIFICATE_INSTALLATION.md  CHANGELOG.md  CHECKSUMS.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_SIGNING_GUIDE.md  CONTRIBUTING.md  DEBUG_REPORT.md  DEVELOPMENT_ROADMAP.md  DLL_DEPENDENCY_SOLUTION.md  DLL_ISSUE_RESOLVED.md  DOWNLOAD_INSTRUCTIONS.md  DUNGEON_QUEST.md  DUNGEON_V2_FIXES.md  DUNGEON_V3_1_PERFORMANCE_FIX.md  DUNGEON_V3_2_INSTANT_INPUT.md  DUNGEON_V3_COORDINATE_FIX.md  DUNGEON_V5_BALANCE_FIX.md  GAME_FIXED.md  ITCH_IO_RELEASE.md  LICENSE  PERFORMANCE_OPTIMIZATION_PLAN.md  PORTABLE_EXECUTABLES_README.md  PRIVACY.md  PROJECT_COMPLETION.md  QUICKSTART_ADVANCED.md  README.md  REPOSITORY_PROTECTION.md  SECURITY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_VERIFICATION.md  STANDALONE_EXECUTABLE_README.md  STANDALONE_PACKAGE_COMPLETE.md  STANDALONE_STATUS_REPORT.md  V4_LIGHTNING_EDITION.md  WINDOWS_EXECUTABLE.md  build_all_static.bat  (+12 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backup.yml  ci.yml  codeql-analysis.yml
docs/: ADVANCED_RENDERING.md  PERFORMANCE.md  SAVE_SYSTEM.md
examples/: README.md  advanced_demo.py  complete_demo.py  interactive_demo.py  multiplayer_example.py  physics_system.py  scripting_system.py
itch_io_build/: README.txt  itch_io_page.txt
itch_io_build/assets/: .gitkeep
src/: AnimatedSprite.cpp  AnimatedSprite.h  Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  AssetPipeline.cpp  AssetPipeline.h  Audio.cpp  Audio.h  CMakeLists.txt  Camera.cpp  Camera.h  Collision.cpp  Collision.h  Debug.cpp  Debug.h  ECS.cpp  ECS.h  ExampleScenes.cpp  ExampleScenes.h  Input.cpp  Input.h  Networking.cpp  Networking.h  ParticleSystem.cpp  ParticleSystem.h  Physics.cpp  Physics.h  PostProcessing.h  Renderer.cpp  Renderer.h  SaveSystem.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Scripting.cpp  Scripting.h  Shader.cpp  (+13 more)
